<resources>
    <string name="app_name">Health In Mind</string>
    <string name="health_in_mind">Health in mind</string>
    <string name="track_your_health_and_be_healthy">Track your health and be healthy</string>
    <string name="dosage">Dosage</string>
    <string name="form">Form</string>
    <string name="frequency">Frequency</string>
    <string name="reminder">Reminder</string>
    <string name="refill_quantity">Refill Quantity</string>
    <string name="medicine_start_date">Medecine Start Date</string>
    <string name="medicine_has_no_end_date">Medecine has no end date</string>
    <string name="medicine_end_date">Medecine End Date</string>
    <string name="medicine_instructions">Medicine Instructions</string>
    <string name="name_txt">Name</string>
    <string name="refill_reminder">Refill Reminder</string>
    <string name="added_medicine_name">Medicine Name</string>
    <string name="added_medicine_dosage">Dosage-eg.250 mg</string>
    <string name="today_s_medicines">Today\'s Medicines</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="appointment_type">Appointment Type</string>
    <string name="location">Location</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="remind">Remind</string>
    <string name="quantity_to_take">%1$s pills</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="reminders">Reminders</string>
    <string name="add_a_reminder">Add a reminder</string>
    <string name="quantity_hint">Select a quantity</string>
    <string name="quarter">Quarter</string>
    <string name="half">Half</string>
    <string name="quarter_and_half">Quarter and half</string>
    <string name="one">One</string>
    <string name="one_and_quarter">One and quarter</string>
    <string name="one_and_half">One and half</string>
    <string name="one_and_three_quarters">One and three quarters</string>
    <string name="two">Two</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">NO DATA</string>
    <string name="no_medicines">You don\'t have any medicines</string>
    <string name="no_appointments">You don\'t have any appointments</string>
    <string name="pill">Pills</string>
    <string name="liquid">Liquid</string>
    <string name="tablet">Tablet</string>
    <string name="capsules">Capsules</string>
    <string name="topicalMedicines">Topical medicines</string>
    <string name="suppositories">Suppositories</string>
    <string name="drops">Drops</string>
    <string name="inhalers">Inhalers</string>
    <string name="injections">Injections</string>
    <string name="implantsOrPatches">Implants or patches</string>
    <string name="home">Home</string>
    <string name="medicines">Medicines</string>
    <string name="add_medicine">Add a medicine</string>
</resources>
